--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@ function agendaFilters(){ return { desde:document.getElementById('agDesde').valu
 function renderAgenda(){
   const wrapHoy=document.getElementById('agHoy'), wrapSem=document.getElementById('agSemana'), wrapFut=document.getElementById('agFuturas'); [wrapHoy,wrapSem,wrapFut].forEach(w=>w.innerHTML='');
   const {desde,hasta,vendedor,gestor,status} = agendaFilters(); const ds=desde?new Date(desde+'T00:00:00'):null; const hs=hasta?new Date(hasta+'T23:59:59'):null;
-  const items = allCalls().filter(r=>{ if(!r.cita_tipo || r.cita_tipo==='sin_cita' || r.cita_tipo==='no_cita' || !r.cita_fecha || !r.cita_hora) return false; const f=r.cita_fecha?new Date(r.cita_fecha+'T'+(r.cita_hora||'00:00')):null; if(ds && f && f<ds) return false; if(hs && f && f>hs) return false; if(vendedor && r.vendedor!==vendedor) return false; if(gestor && r.gestor_servicio!==gestor) return false; if(status && (r.estatus_visita||'programada')!==status) return false; return true; });
+  const items = allCalls().filter(r=>{ if(!r.cita_tipo || r.cita_tipo==='sin_cita' || r.cita_tipo==='no_cita' || !r.cita_fecha || !r.cita_hora) return false; const f=r.cita_fecha?new Date(r.cita_fecha+'T'+(r.cita_hora||'00:00')):null; if(ds && f && f<ds) return false; if(hs && f && f>hs) return false; if(vendedor && r.vendedor!==vendedor) return false; if(gestor && r.gestor_servicio!==gestor) return false; if(status){ if((r.estatus_visita||'programada')!==status) return false; } else { const s=(r.estatus_visita||'programada'); if(!(s==='programada'||s==='reprogramada')) return false; } return true; });
   const today=new Date(); today.setHours(0,0,0,0); const endWeek=new Date(today); endWeek.setDate(today.getDate() + (7 - today.getDay()));
   items.forEach(r=>{ const f=r.cita_fecha?new Date(r.cita_fecha+'T'+(r.cita_hora||'00:00')):null; const card=agendaCard(r); if(!f || f<today){ wrapSem.appendChild(card); } else if(f.toDateString()===today.toDateString()){ wrapHoy.appendChild(card); } else if(f<=endWeek){ wrapSem.appendChild(card); } else { wrapFut.appendChild(card); } });
 }
@@ -893,7 +893,7 @@ function updateCallRecord(id, patch){
 }
 function exportAgendaCSV(){
   const {desde,hasta,vendedor,gestor,status} = agendaFilters(); const ds=desde?new Date(desde+'T00:00:00'):null; const hs=hasta?new Date(hasta+'T23:59:59'):null;
-  const data = allCalls().filter(r=> r.cita_tipo && r.cita_tipo!=='sin_cita').filter(r=>{ const f=r.cita_fecha?new Date(r.cita_fecha+'T'+(r.cita_hora||'00:00')):null; if(ds && f && f<ds) return false; if(hs && f && f>hs) return false; if(vendedor && r.vendedor!==vendedor) return false; if(gestor && r.gestor_servicio!==gestor) return false; if(status && (r.estatus_visita||'programada')!==status) return false; return true; });
+  const data = allCalls().filter(r=> r.cita_tipo && r.cita_tipo!=='sin_cita').filter(r=>{ const f=r.cita_fecha?new Date(r.cita_fecha+'T'+(r.cita_hora||'00:00')):null; if(ds && f && f<ds) return false; if(hs && f && f>hs) return false; if(vendedor && r.vendedor!==vendedor) return false; if(gestor && r.gestor_servicio!==gestor) return false; if(status){ if((r.estatus_visita||'programada')!==status) return false; } else { const s=(r.estatus_visita||'programada'); if(!(s==='programada'||s==='reprogramada')) return false; } return true; });
   const headers=['Cliente','Cod','Vendedor','Gestor','Fecha','Hora','Estatus','Tipo','Obs']; const rows=data.map(r=>[r.cliente||'',r.cod_empresa||'',r.vendedor||'',r.gestor_servicio||'',r.cita_fecha||'',r.cita_hora||'',r.estatus_visita||'programada',r.cita_tipo||'',r.observaciones||'']); const csv=[headers.join(','),...rows.map(r=>r.map(csvEscape).join(','))].join('\\n'); const a=document.createElement('a'); a.href=URL.createObjectURL(new Blob([csv],{type:'text/csv'})); a.download='agenda.csv'; a.click(); URL.revokeObjectURL(a.href);
 }
 
@@ -963,7 +963,7 @@ function gvDataFiltered(){
       if(hs && f && f>hs) return false;
       if(vendedor && r.vendedor!==vendedor) return false;
       if(gestor && r.gestor_servicio!==gestor) return false;
-      if(status && (r.estatus_visita||'programada')!==status) return false;
+      if(status){ if((r.estatus_visita||'programada')!==status) return false; } else { const s=(r.estatus_visita||'programada'); if(!(s==='programada'||s==='reprogramada')) return false; }
       return true;
     });
 }
@@ -3038,31 +3038,29 @@ document.addEventListener('click', (ev)=>{
       g.plan += 1;
     });
 
-    // Count unique customers per Gestor x Semana
     (function(){
-      const uniq = new Map(); // key = gestor__semana -> Set(cod_empresa)
-      let llamadasTotales = 0;
+      const uniq = new Map();
+      let totalCalls = 0;
       doneRows.forEach(c=>{
-        const wk = getCallWeek(c) || '';
-        const ges = getCallGestor(c) || '';
+        const wk = getCallWeek(c)||'';
+        const ges= getCallGestor(c)||'';
         const cod = String(c.cod_empresa || c['Cod Empresa'] || c.cod || c.codigo || c.Cod || '').trim() || String(c.cliente||'').trim();
-        const k = ges + '__' + wk;
-        if(!uniq.has(k)) uniq.set(k, new Set());
-        uniq.get(k).add(cod);
+        const key = ges+'__'+wk;
+        if(!uniq.has(key)) uniq.set(key, new Set());
+        uniq.get(key).add(cod);
         const g = aggSet(ges, wk);
         const d = getCallFecha(c);
         if(d && (!g.last || d>g.last)) g.last = d;
-        llamadasTotales += 1;
+        totalCalls += 1;
       });
-      // write totals as unique sizes
-      uniq.forEach((set,k)=>{
-        const [ges, wk] = k.split('__');
+      uniq.forEach((set,key)=>{
+        const [ges,wk] = key.split('__');
         const g = aggSet(ges, wk);
         g.done = set.size;
       });
-      // expose total raw calls for optional KPI
-      window.__resumen_total_calls = llamadasTotales;
+      window.__resumen_total_calls = totalCalls;
     })();
+
     const full = ensureFourWeeks(groups);
     const rows = Array.from(full.values()).sort((a,b)=>{
       if(a.gestor === b.gestor){
@@ -3086,8 +3084,8 @@ document.addEventListener('click', (ev)=>{
     const kpiDone=document.getElementById('kpiDone'); if(kpiDone) kpiDone.textContent=String(totalDone);
     if(rwCov)  rwCov.textContent  = cov + '%';
     var k3=document.getElementById('kpiCov'); if(k3) k3.textContent=cov + '%';
-    const kpiCov=document.getElementById('kpiCov'); if(kpiCov) kpiCov.textContent = cov + '%';
-    var k4=document.getElementById('kpiCalls'); if(k4) k4.textContent = String(window.__resumen_total_calls||0);
+    const kpiCov=document.getElementById('kpiCov'); if(kpiCov) kpiCov.textContent = cov + '%'; 
+var k4=document.getElementById('kpiCalls'); if(k4) k4.textContent = String(window.__resumen_total_calls||0);
 
     renderBreakdown(rows);
     const tb = document.querySelector('#rwTbl tbody');
@@ -5107,17 +5105,17 @@ document.getElementById('rsTabReal').onclick = (e)=>{ e.target.classList.add('ac
 (function(){
   function toggleDisplay(el){ if(!el) return; el.style.display = (el.style.display==='none' ? '' : 'none'); }
   document.addEventListener('click', function(ev){
-    if(ev.target && ev.target.id === 'dlpToggle'){
-      var wrap = document.getElementById('dlpTableWrap') || document.querySelector('.dlp-card');
+    if(ev.target && ev.target.id==='dlpToggle'){
+      var wrap=document.getElementById('dlpTableWrap')||document.querySelector('.dlp-card');
       toggleDisplay(wrap);
       ev.target.textContent = (wrap && wrap.style.display==='none') ? 'Mostrar' : 'Ocultar';
     }
-    if(ev.target && ev.target.id === 'rwToggle'){
-      var kpis = document.getElementById('rwKpis');
-      var tb   = document.getElementById('rwTbl') ? document.getElementById('rwTbl').closest('.card') || document.getElementById('rwTbl') : null;
-      var br   = document.getElementById('rwBreakdown');
-      toggleDisplay(kpis); toggleDisplay(tb); toggleDisplay(br);
-      ev.target.textContent = ( (kpis && kpis.style.display==='none') ? 'Mostrar' : 'Ocultar' );
+    if(ev.target && ev.target.id==='rwToggle'){
+      var k=document.getElementById('rwKpis');
+      var tb=document.getElementById('rwTbl') ? document.getElementById('rwTbl').closest('.card')||document.getElementById('rwTbl') : null;
+      var br=document.getElementById('rwBreakdown');
+      toggleDisplay(k); toggleDisplay(tb); toggleDisplay(br);
+      ev.target.textContent = (k && k.style.display==='none') ? 'Mostrar' : 'Ocultar';
     }
   }, true);
 })();
@@ -5125,3 +5123,39 @@ document.getElementById('rsTabReal').onclick = (e)=>{ e.target.classList.add('ac
 
 </body>
 </html>
+<!-- Performance & Map-Ready Fix -->
+<script>
+(function(){
+  function ensureTileLayer() {
+    try{
+      if(!(window.STATE && STATE.map)) return false;
+      var hasTile=false;
+      STATE.map && STATE.map.eachLayer && STATE.map.eachLayer(function(l){
+        try{ if(l && l._url && (''+l._url).indexOf('tile.openstreetmap.org')>=0) hasTile=true; }catch(_){}
+      });
+      if(!hasTile && window.L && STATE.map){
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19,attribution:'&copy; OpenStreetMap'}).addTo(STATE.map);
+      }
+      return true;
+    }catch(e){ return false; }
+  }
+  function ensureMapReady(){
+    try{
+      if(typeof initMap==='function' && (!window.STATE || !STATE.map)) initMap();
+      ensureTileLayer();
+      if(window.STATE && STATE.map){
+        try{ STATE.map.setView([18.735693,-70.162651],8);}catch(_){}
+        try{ STATE.map.invalidateSize(); }catch(_){}
+        setTimeout(function(){
+          try{ STATE.map.invalidateSize(); }catch(_){}
+          if(typeof applyFilters==='function'){ try{ applyFilters(); }catch(_){ } }
+        },150);
+      } else { setTimeout(ensureMapReady,150); }
+    }catch(_){}
+  }
+  (function(){ if(typeof window.applyFilters==='function' && !window.__applyFiltersPatched){ var _af=window.applyFilters,t; window.applyFilters=function(){ clearTimeout(t); var a=arguments,c=this; t=setTimeout(function(){ try{ _af.apply(c,a);}catch(_){}} ,60);}; window.__applyFiltersPatched=true; }})();
+  window.addEventListener('load', function(){ setTimeout(ensureMapReady,60); setTimeout(ensureMapReady,300); });
+  var ap=document.getElementById('app'); if(ap && window.MutationObserver){ var mo=new MutationObserver(function(){ if(!ap.classList.contains('hidden')) ensureMapReady(); }); mo.observe(ap,{attributes:true, attributeFilter:['class']}); }
+  var mapEl=document.getElementById('map'); if(mapEl && window.ResizeObserver){ var ro=new ResizeObserver(function(){ try{ if(window.STATE && STATE.map) STATE.map.invalidateSize(); }catch(_){}}); ro.observe(mapEl); }
+})();
+</script>
