--- a/index.html
+++ b/index.html
@@ -806,7 +806,8 @@ function saveCallRecord(){
   try{ const prev = JSON.parse(localStorage.getItem('llamadas_records')||'[]'); prev.push(record); localStorage.setItem('llamadas_records', JSON.stringify(prev)); }catch(e){ console.error(e); }
   document.getElementById('callStatus').textContent = 'Registro guardado localmente.';
   setTimeout(()=>{ closeCallModal(); showErr('Llamada registrada.'); }, 400);
-}
+  try{ document.dispatchEvent(new CustomEvent('realizadas:saved')); }catch(_){}
+  }
 
 // ======================= REPORTE =======================
 function loadAllCallRecords(){ let local=[]; try{ local = JSON.parse(localStorage.getItem('llamadas_records')||'[]'); }catch(_){ local=[]; } return [...local, ...STATE.calls]; }
@@ -1474,44 +1475,24 @@ function __buildDoneIndex(allCalls, dateFrom, dateTo){
   const from = dateFrom ? new Date(dateFrom+'T00:00:00') : null;
   const to   = dateTo   ? new Date(dateTo+'T23:59:59')   : null;
   const map = new Map();
-  const seen = new Map(); // key -> Set(clientes) para evitar doble conteo
+  const seen = new Map(); // key -> Set(cod cliente) para evitar doble conteo
   for(const r of (allCalls||[])){
-    // Fecha
     const d = (window.RZ && RZ.parseDateLoose) ? RZ.parseDateLoose(r.fecha_hora) : new Date(r.fecha_hora);
     if(!d || isNaN(d)) continue;
-    if(from && d < from) continue;
-    if(to && d > to) continue;
-
-    // Gestor
+    if(from && d < from) continue; if(to && d > to) continue;
     const gestor = (r.gestor_servicio||'').trim();
-
-    // Día (normalizado)
-    const dia = (function(){
-      try{ return __normDia(d.toLocaleDateString('es-ES',{ weekday:'long' })); }catch(_){ return __normDia(r.dia||''); }
-    })();
-
-    // Semana: prioriza campo propio si existe, si no calcula con weekOfMonth14
+    const dia = (()=>{ try{ return __normDia(d.toLocaleDateString('es-ES',{ weekday:'long' })); }catch(_){ return __normDia(r.dia||''); } })();
     let sem = '';
     if (r.nsemana !== undefined && r.nsemana !== null && String(r.nsemana).trim()!==''){
       sem = String(r.nsemana).trim();
     } else if (window.RZ && typeof RZ.weekOfMonth14==='function'){
       sem = String(RZ.weekOfMonth14(d));
-    } else {
-      // fallback por si acaso
-      const day = d.getDate(); sem = String(day<=7?1: day<=14?2: day<=21?3:4);
-    }
-
+    } else { const day = d.getDate(); sem = String(day<=7?1: day<=14?2: day<=21?3:4); }
     const key = gestor+'||'+sem+'||'+dia;
     const it = map.get(key) || { gestor, semana: sem, dia, realizadas:0, last:null };
-    // Conteo por cliente único
-    const cli = (r.cliente||'').toString().trim().toLowerCase();
+    const cod = (r.cod || r.codigo || r.codigo_npg || r.cod_cliente || r['codigo_npg'] || '').toString().trim().toLowerCase();
     const set = seen.get(key) || new Set();
-    if(!set.has(cli)){
-      it.realizadas += 1;
-      set.add(cli);
-      seen.set(key,set);
-    }
-    // Última llamada
+    if(!set.has(cod)){ it.realizadas += 1; set.add(cod); seen.set(key,set); }
     it.last = (!it.last || (new Date(it.last) < d)) ? (r.fecha_hora || d.toISOString()) : it.last;
     map.set(key, it);
   }
@@ -2652,8 +2633,9 @@ document.addEventListener('click', (ev)=>{
           const sema = r['SEMANA']||r['Semana']||r['semana']||'';
           const col = elements.panel.querySelector('#dlpCalCol-'+(cols.includes(dia)?dia:'LUNES'));
           const card = document.createElement('div'); card.className='kcard';
-          const _cc = (window._REALIZADAS_CLIENTES||new Set());
-          const _status = _cc.has((cli||'').toLowerCase()) ? 'ok' : 'miss';
+          const _rk = (window.getRealizadasKeySet ? window.getRealizadasKeySet() : (window._REALIZADAS_KEYS||new Set()));
+          const _key = (String((cod||'')).toLowerCase().trim() + '|' + String(sema||'').trim());
+          const _status = _rk.has(_key) ? 'ok' : 'miss';
           card.innerHTML = '<div class="khead"><span class="cal-dot '+_status+'"></span>'+(cli||'')+'</div>' +
                            '<div class="kmeta">'+(cod||'')+' • '+vend+' • '+ges+'</div>' +
                            '<div class="muted" style="margin-top:6px;">Semana '+sema+' — '+dia+'</div>';
@@ -5301,6 +5283,48 @@ document.getElementById('rsTabReal').onclick = (e)=>{ e.target.classList.add('ac
 
 </body>
 </html>
+
+<script>
+(function(){
+  function norm(v){ return (v||'').toString().trim().toLowerCase(); }
+  function key(cod,sem){ return norm(cod)+'|'+String(sem||'').trim(); }
+  function getSemanaFromRow(row){
+    try { return (window.RZ && typeof RZ.getSemanaFromRow==='function') ? RZ.getSemanaFromRow(row) : (row.NSEMANA||row['N Semana']||row.nsemana||row.semana||row.Semana); } catch(_){ return row && (row.NSEMANA||row['N Semana']||row.nsemana||row.semana||row.Semana); }
+  }
+  function collectFromReporte(){
+    try{
+      var rows = (window.__repRows__||[]);
+      if(Array.isArray(rows) && rows.length){
+        var s=new Set();
+        rows.forEach(function(r){
+          var sem = getSemanaFromRow(r);
+          var cod = r.Cod || r.cod || r.codigo || r.codigo_npg || r['Código'] || r['codigo_npg'];
+          s.add(key(cod, sem));
+        });
+        return s;
+      }
+    }catch(_){}
+    return null;
+  }
+  function collectFromCalls(){
+    try{
+      var calls = (window.loadAllCallRecords ? window.loadAllCallRecords() : []);
+      var s=new Set();
+      calls.forEach(function(c){
+        var d = (window.RZ && RZ.parseDateLoose) ? RZ.parseDateLoose(c.fecha_hora) : new Date(c.fecha_hora);
+        var sem = (c.nsemana!=null && c.nsemana!=='') ? c.nsemana : (window.RZ && RZ.weekOfMonth14 ? RZ.weekOfMonth14(d) : null);
+        var cod = c.cod || c.codigo || c.codigo_npg || c.cod_cliente || c['codigo_npg'];
+        s.add(key(cod, sem));
+      });
+      return s;
+    }catch(_){ return new Set(); }
+  }
+  window.getRealizadasKeySet = function(){ return collectFromReporte() || collectFromCalls(); };
+  document.addEventListener('DOMContentLoaded', function(){ try{ window._REALIZADAS_KEYS = getRealizadasKeySet(); }catch(_){ window._REALIZADAS_KEYS = new Set(); } });
+  document.addEventListener('realizadas:saved', function(){ try{ window._REALIZADAS_KEYS = getRealizadasKeySet(); }catch(_){ } });
+  document.addEventListener('realizadas:update', function(){ try{ window._REALIZADAS_KEYS = getRealizadasKeySet(); }catch(_){ } });
+})();
+</script>
 <!-- Performance & Map-Ready Fix -->
 <script>
 (function(){
