--- a/index.html
+++ b/index.html
@@ -806,8 +806,7 @@ function saveCallRecord(){
   try{ const prev = JSON.parse(localStorage.getItem('llamadas_records')||'[]'); prev.push(record); localStorage.setItem('llamadas_records', JSON.stringify(prev)); }catch(e){ console.error(e); }
   document.getElementById('callStatus').textContent = 'Registro guardado localmente.';
   setTimeout(()=>{ closeCallModal(); showErr('Llamada registrada.'); }, 400);
-  try{ document.dispatchEvent(new CustomEvent('realizadas:saved')); }catch(_){}
-  }
+}
 
 // ======================= REPORTE =======================
 function loadAllCallRecords(){ let local=[]; try{ local = JSON.parse(localStorage.getItem('llamadas_records')||'[]'); }catch(_){ local=[]; } return [...local, ...STATE.calls]; }
@@ -1470,35 +1469,24 @@ function __buildPlanIndex(baseRows){
 
 // Construye índice de realizadas desde registros de llamadas (localStorage + STATE.calls)
 function __toDate(s){ const d = new Date(s); return isNaN(d)? null : d; }
-
 function __buildDoneIndex(allCalls, dateFrom, dateTo){
   const from = dateFrom ? new Date(dateFrom+'T00:00:00') : null;
   const to   = dateTo   ? new Date(dateTo+'T23:59:59')   : null;
   const map = new Map();
-  const seen = new Map(); // key -> Set(cod cliente) para evitar doble conteo
   for(const r of (allCalls||[])){
-    const d = (window.RZ && RZ.parseDateLoose) ? RZ.parseDateLoose(r.fecha_hora) : new Date(r.fecha_hora);
-    if(!d || isNaN(d)) continue;
+    const d = __toDate(r.fecha_hora); if(!d) continue;
     if(from && d < from) continue; if(to && d > to) continue;
     const gestor = (r.gestor_servicio||'').trim();
-    const dia = (()=>{ try{ return __normDia(d.toLocaleDateString('es-ES',{ weekday:'long' })); }catch(_){ return __normDia(r.dia||''); } })();
-    let sem = '';
-    if (r.nsemana !== undefined && r.nsemana !== null && String(r.nsemana).trim()!==''){
-      sem = String(r.nsemana).trim();
-    } else if (window.RZ && typeof RZ.weekOfMonth14==='function'){
-      sem = String(RZ.weekOfMonth14(d));
-    } else { const day = d.getDate(); sem = String(day<=7?1: day<=14?2: day<=21?3:4); }
+    const dia = __normDia(d.toLocaleDateString('es-ES',{ weekday:'long' }));
+    const sem = ''; // Si se desea cruzar por semana planificada, dejar vacío o parametrizar
     const key = gestor+'||'+sem+'||'+dia;
     const it = map.get(key) || { gestor, semana: sem, dia, realizadas:0, last:null };
-    const cod = (r.cod || r.codigo || r.codigo_npg || r.cod_cliente || r['codigo_npg'] || '').toString().trim().toLowerCase();
-    const set = seen.get(key) || new Set();
-    if(!set.has(cod)){ it.realizadas += 1; set.add(cod); seen.set(key,set); }
-    it.last = (!it.last || (new Date(it.last) < d)) ? (r.fecha_hora || d.toISOString()) : it.last;
+    it.realizadas += 1;
+    it.last = (!it.last || (__toDate(it.last) < d)) ? r.fecha_hora : it.last;
     map.set(key, it);
   }
   return map;
 }
-
 
 // Render del Resumen
 function __renderRepResumen(){
@@ -2320,6 +2308,25 @@ document.addEventListener('click', (ev)=>{
   }
 </style>
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+<script>
+
+// Status filter behavior
+(function(){
+  const box = document.getElementById('dlpStatusFilter');
+  if(!box) return;
+  function setActive(st){
+    window.__dlpStatus = st;
+    box.querySelectorAll('.dlp-tab').forEach(b=> b.classList.toggle('active', b.dataset.st===st));
+    try{ if(typeof render==='function') render(); }catch(_){}
+  }
+  box.addEventListener('click', (e)=>{
+    const b = e.target.closest('.dlp-tab'); if(!b) return;
+    setActive(b.dataset.st);
+  });
+  setActive('all');
+})();
+
+</script>
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 <script>
 (function(){
@@ -2378,7 +2385,11 @@ document.addEventListener('click', (ev)=>{
         <div class="dlp-actions"><button class="dlp-btn btn-soft" id="dlpToggle">Ocultar</button>
           <button class="dlp-btn" id="dlpExportActive">Exportar Excel</button>
           <button class="dlp-btn" id="dlpExportBoth">Exportar Excel — Todo</button>
-        
+          <div class="dlp-chips" id="dlpStatusFilter" style="margin-left:8px;">
+            <button class="dlp-tab" data-st="all">Todos</button>
+            <button class="dlp-tab" data-st="ok">Gestionados</button>
+            <button class="dlp-tab" data-st="miss">No gestionados</button>
+          </div>
       </div>
       <div id="dlpCalWrap" style="display:none; margin-top:10px;">
         <div class="kanban">
@@ -2636,6 +2647,8 @@ document.addEventListener('click', (ev)=>{
           const _rk = (window.getRealizadasKeySet ? window.getRealizadasKeySet() : (window._REALIZADAS_KEYS||new Set()));
           const _key = (String((cod||'')).toLowerCase().trim() + '|' + String(sema||'').trim());
           const _status = _rk.has(_key) ? 'ok' : 'miss';
+          const stf = (window.__dlpStatus||'all');
+          if(stf!=='all' && stf!==_status){ return; }
           card.innerHTML = '<div class="khead"><span class="cal-dot '+_status+'"></span>'+(cli||'')+'</div>' +
                            '<div class="kmeta">'+(cod||'')+' • '+vend+' • '+ges+'</div>' +
                            '<div class="muted" style="margin-top:6px;">Semana '+sema+' — '+dia+'</div>';
@@ -5283,48 +5296,6 @@ document.getElementById('rsTabReal').onclick = (e)=>{ e.target.classList.add('ac
 
 </body>
 </html>
-
-<script>
-(function(){
-  function norm(v){ return (v||'').toString().trim().toLowerCase(); }
-  function key(cod,sem){ return norm(cod)+'|'+String(sem||'').trim(); }
-  function getSemanaFromRow(row){
-    try { return (window.RZ && typeof RZ.getSemanaFromRow==='function') ? RZ.getSemanaFromRow(row) : (row.NSEMANA||row['N Semana']||row.nsemana||row.semana||row.Semana); } catch(_){ return row && (row.NSEMANA||row['N Semana']||row.nsemana||row.semana||row.Semana); }
-  }
-  function collectFromReporte(){
-    try{
-      var rows = (window.__repRows__||[]);
-      if(Array.isArray(rows) && rows.length){
-        var s=new Set();
-        rows.forEach(function(r){
-          var sem = getSemanaFromRow(r);
-          var cod = r.Cod || r.cod || r.codigo || r.codigo_npg || r['Código'] || r['codigo_npg'];
-          s.add(key(cod, sem));
-        });
-        return s;
-      }
-    }catch(_){}
-    return null;
-  }
-  function collectFromCalls(){
-    try{
-      var calls = (window.loadAllCallRecords ? window.loadAllCallRecords() : []);
-      var s=new Set();
-      calls.forEach(function(c){
-        var d = (window.RZ && RZ.parseDateLoose) ? RZ.parseDateLoose(c.fecha_hora) : new Date(c.fecha_hora);
-        var sem = (c.nsemana!=null && c.nsemana!=='') ? c.nsemana : (window.RZ && RZ.weekOfMonth14 ? RZ.weekOfMonth14(d) : null);
-        var cod = c.cod || c.codigo || c.codigo_npg || c.cod_cliente || c['codigo_npg'];
-        s.add(key(cod, sem));
-      });
-      return s;
-    }catch(_){ return new Set(); }
-  }
-  window.getRealizadasKeySet = function(){ return collectFromReporte() || collectFromCalls(); };
-  document.addEventListener('DOMContentLoaded', function(){ try{ window._REALIZADAS_KEYS = getRealizadasKeySet(); }catch(_){ window._REALIZADAS_KEYS = new Set(); } });
-  document.addEventListener('realizadas:saved', function(){ try{ window._REALIZADAS_KEYS = getRealizadasKeySet(); }catch(_){ } });
-  document.addEventListener('realizadas:update', function(){ try{ window._REALIZADAS_KEYS = getRealizadasKeySet(); }catch(_){ } });
-})();
-</script>
 <!-- Performance & Map-Ready Fix -->
 <script>
 (function(){
